--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,8 +21,8 @@ jobs:
         uses: rohith/publish-nuget@v2
         with:
           # Filepath of the project to be packaged, relative to root of repository
-          PROJECT_FILE_PATH: src/Sl.WebEtensions/Sl.WebEtensions.csproj
-          PACKAGE_NAME: Sl.WebEtensions
+          PROJECT_FILE_PATH: src/Sl.WebExtensions/Sl.WebExtensions.csproj
+          PACKAGE_NAME: Sl.WebExtensions
 
           # API key to authenticate with NuGet server
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
