--- a/src/Sl.WebExtensions/Sl.WebExtensions.csproj
+++ b/src/Sl.WebExtensions/Sl.WebExtensions.csproj
@@ -3,12 +3,26 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.2.1</Version>
+    <Version>2.0.0</Version>
     <AssemblyVersion>1.2.2.0</AssemblyVersion>
     <FileVersion>1.2.2.0</FileVersion>
     <PackageReleaseNotes>Confirm Dialogs</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <Company>$(Authors)</Company>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/emre-gon/Sl.WebExtensions</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/emre-gon/Sl.WebExtensions</PackageProjectUrl>
+    <Copyright>2022</Copyright>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <Authors>emre-gon</Authors>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
